# py-data-processor-service

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_template.yml  docs.yml  feature_request.yml  question.yml
app/: cli.py  config.py  main.py
app/analytics/: drilldown.py  indicators.py  ranking.py  scoring.py
app/api/: routes.py
app/core/: errors.py  logging.py  response.py
app/ingest/: excel_reader.py  normalizer.py  subject_parser.py
app/reporting/: charts.py  excel_report.py  ppt_report.py  template_generator.py
app/risk/: rules.py
app/services/: processor.py
app/storage/: db.py  repository.py
app/utils/: csv_tools.py  filetype.py  image_tools.py  json_tools.py
data/: sample.csv  sample.json  sample_image_base64.txt
scripts/: docker_verify.sh  generate_demo_data.py  run_local.sh  verify.sh
tests/: conftest.py  test_cli_smoke.py  test_health.py  test_indicators.py  test_ingest.py  test_process_csv.py  test_process_image.py  test_process_json.py  test_process_unsupported.py  test_query_rank.py  test_reports_excel.py  test_reports_ppt.py  test_scoring.py
